# admission-scraper-webapp

./: .gitignore  AGENTS.md  Dockerfile  README.md  fly.toml  justfile  main.py  package.json  pyproject.toml  vercel.json
app/: app.py
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9830ac4acff6_init.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: announcements.py  filters.py  meta.py
backend/app/db/: connection.py  models.py  session.py
backend/app/schemas/: announcement.py  institution.py  program.py  tag.py
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnnouncementCard.tsx  FilterBar.tsx  GeneralAnnouncementCard.tsx  GeneralFilterBar.tsx  HomeFilterBar.tsx  Layout.tsx  ScrollToTop.tsx  TopProgressBar.tsx
frontend/src/components/ui/: calendar.tsx
frontend/src/hooks/: use-announcements.ts  use-toast.ts
frontend/src/lib/: apiRoutes.ts  queryClient.ts  schema.ts
frontend/src/pages/: AnnouncementDetails.tsx  ExamInfoAnnouncements.tsx  GeneralAnnouncements.tsx  Home.tsx  ResultInfoAnnouncements.tsx  not-found.tsx
